# snowfox-libvireg

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/example-01-led-driver/: CMakeLists.txt  example-01.json  main.cpp
include/vireg/: Version.h  VirtualRegister.hpp  VirtualRegister.ipp  VirtualRegisterLoader.h  VirtualRegisterMap.hpp  VirtualRegisterMap.ipp
src/: VirtualRegisterLoader.cpp  VirtualRegisterMap.cpp
