##########################################################################

cmake_minimum_required(VERSION 3.0)

##########################################################################

set(TARGET example-02-led-driver)

##########################################################################

add_executable(${TARGET} main.cpp)

target_link_libraries(${TARGET} vireg)

##########################################################################
